--- a/assets/css/setup/mq-mail.css
+++ b/assets/css/setup/mq-mail.css
@@ -1,8 +1,11 @@
 /* assets/css/setup/mq-mail.css */
 
 @media (max-width: 700px) {
-  :root {
+  :root,
+  html,
+  body {
     font-size: 14px;
+    overflow-x: hidden !important;
   }
 
   /* SideBar */
@@ -65,8 +68,9 @@
   /* Main Layout */
   .mail-page-layout {
     width: 100%;
+    max-width: 100%;
     height: 100%;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 50px calc(1fr+50px);
     grid-template-rows: 100px 1fr;
   }
 
@@ -103,6 +107,12 @@
     padding: 1em;
 
     gap: 0.8em;
+  }
+
+  /* Mail Filter */
+  section.mail-filter form {
+    max-width: 680px;
+    min-width: 224px;
   }
 }
 
@@ -233,7 +243,6 @@
 
 /* ModalFilter */
 .modal-content-filter {
-  position: absolute;
   font-size: 0.875rem;
   top: 100%;
   width: 50vw;
